--- a/frontend/.env
+++ b/frontend/.env
@@ -6,8 +6,8 @@ STRAPI_BACKEND_URL = "http://127.0.0.1:2551"
 Local_NEXTAUTH_URL= 'http://localhost:2551'
 NEXTAUTH_URL= 'http://localhost:2552'
 
-GOOGLE_CLIENT_ID = "212178546574-2nvpn7eeufjv31gj413b0cdflq7uhc0k.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRET = "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"
+GOOGLE_CLIENT_ID = ""
+GOOGLE_CLIENT_SECRET = ""
 
 API_TOKEN_SALT=hd2UaCWKYY9pIABP28mShA==
 NEXTAUTH_SECRET=51pPzAsPttl+q2+X7Pmzcg==
